--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>
-  {{title}}
-</h1>
-<button class="ui button active">Follow</button>
+<div class="ui container">
+  <user-profile-form></user-profile-form>
+</div>
