Added required validator and submit button

--- a/src/app/user-profile-form/user-profile-form.component.html
+++ b/src/app/user-profile-form/user-profile-form.component.html
@@ -56,6 +56,5 @@
         </div>
     </div>
 
-
-    <div class="ui submit button">Submit</div>
+    <button class="ui submit button" type="submit" [disabled]="user.invalid">Submit</button>
 </form>
