--- a/src/app/user-profile-form/user-profile-form.component.html
+++ b/src/app/user-profile-form/user-profile-form.component.html
@@ -5,11 +5,19 @@
     <div class="field">
         <label>Name</label>
         <div class="two fields">
-            <div class="field">
+            <div class="field" [ngClass]="{'error': user.get('firstName').hasError('required') && user.get('firstName').touched}">
                 <input type="text" name="firstName" formControlName="firstName" placeholder="First Name">
+
+                <div class="error">
+                    <p *ngIf="user.get('firstName').hasError('required') && user.get('firstName').touched">First name is required</p>
+                </div>
             </div>
-            <div class="field">
+
+            <div class="field" [ngClass]="{'error': user.get('lastName').hasError('required') && user.get('lastName').touched}">
                 <input type="text" name="lastName" formControlName="lastName" placeholder="Last Name">
+                <div class="error">
+                    <p *ngIf="user.get('lastName').hasError('required') && user.get('lastName').touched">Last name is required</p>
+                </div>
             </div>
         </div>
     </div>
@@ -17,8 +25,11 @@
     <div class="field">
         <label>Email</label>
         <div class="two fields">
-            <div class="field">
+            <div class="field" [ngClass]="{'error': user.get('email').hasError('required') && user.get('email').touched}">
                 <input type="email" name="email" formControlName="email" placeholder="Enter your email">
+                <div class="error">
+                    <p *ngIf="user.get('email').hasError('required') && user.get('email').touched">Email is required</p>
+                </div>
             </div>
         </div>
     </div>
@@ -42,16 +53,25 @@
     <div class="field" formGroupName="birthday">
         <label>Birthday</label>
         <div class="three fields">
-            <div class="field">
+            <div class="field" [ngClass]="{'error': user.get('birthday').get('day').hasError('required') && user.get('birthday').get('day').touched}">
                 <input type="number" formControlName="day" placeholder="Day">
+                <div class="error">
+                    <p *ngIf="user.get('birthday').get('day').hasError('required') && user.get('birthday').get('day').touched">Day is required</p>
+                </div>
             </div>
 
-            <div class="field">
+            <div class="field" [ngClass]="{'error': user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').touched}">
                 <input type="number" formControlName="month" placeholder="Month">
+                <div class="error">
+                    <p *ngIf="user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').touched">Month is required</p>
+                </div>
             </div>
 
-            <div class="field">
+            <div class="field" [ngClass]="{'error': user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').touched}">
                 <input type="number" formControlName="year" placeholder="Year">
+                <div class="error">
+                    <p *ngIf="user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').touched">Year is required</p>
+                </div>
             </div>
         </div>
     </div>
