Fixed validation in the template.

--- a/src/app/user-profile-form/user-profile-form.component.html
+++ b/src/app/user-profile-form/user-profile-form.component.html
@@ -59,30 +59,38 @@
     <div class="field" formGroupName="birthday">
         <label>Birthday</label>
         <div class="three fields">
-            <div class="field" [ngClass]="{'error': user.get('birthday').get('day').hasError('required') && user.get('birthday').get('day').touched}">
+
+            <div class="field"
+                 [ngClass]="{'error': (user.get('birthday').get('day').hasError('required') && user.get('birthday').get('day').touched) ||
+                                      (user.get('birthday').get('day').hasError('invalidRange') && user.get('birthday').get('day').dirty)}">
                 <input type="number" formControlName="day" placeholder="{{currentDay}}">
                 <div class="error">
                     <p *ngIf="user.get('birthday').get('day').hasError('required') && user.get('birthday').get('day').touched">Day is required</p>
-                    <p *ngIf="user.get('birthday').get('day').hasError('invalidRange') && user.get('birthday').get('day').dirty">Should be a value from 1 to 31</p>
+                    <p *ngIf="!user.get('birthday').get('day').hasError('required') && user.get('birthday').get('day').hasError('invalidRange') && user.get('birthday').get('day').dirty">Should be a value from 1 to 31</p>
                 </div>
             </div>
 
-            <div class="field" [ngClass]="{'error': user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').touched}">
+            <div class="field"
+                 [ngClass]="{'error': (user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').touched) ||
+                                      (user.get('birthday').get('month').hasError('invalidRange') && user.get('birthday').get('month').dirty)}">
                 <input type="number" formControlName="month" placeholder="{{currentMonth}}">
                 <div class="error">
-                    <p *ngIf="user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').touched">Month is required</p>
-                    <p *ngIf="user.get('birthday').get('month').hasError('invalidRange') && user.get('birthday').get('month').dirty">Should be a value from 1 to 31</p>
+                    <p *ngIf="user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').touched">Day is required</p>
+                    <p *ngIf="!user.get('birthday').get('month').hasError('required') && user.get('birthday').get('month').hasError('invalidRange') && user.get('birthday').get('month').dirty">Should be a value from 1 to 12</p>
                 </div>
             </div>
 
-            <div class="field" [ngClass]="{'error': user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').touched}">
+            <div class="field"
+                 [ngClass]="{'error': (user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').touched) ||
+                                      (user.get('birthday').get('year').hasError('invalidRange') && user.get('birthday').get('year').dirty)}">
                 <input type="number" formControlName="year" placeholder="{{currentYear}}">
                 <div class="error">
-                    <p *ngIf="user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').touched">Year is required</p>
-                    <p *ngIf="user.get('birthday').get('year').hasError('invalidRange') && user.get('birthday').get('year').dirty">Should be a value from 1900 to {{currentYear}}</p>
-
+                    <p *ngIf="user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').touched">Day is required</p>
+                    <p *ngIf="!user.get('birthday').get('year').hasError('required') && user.get('birthday').get('year').hasError('invalidRange') && user.get('birthday').get('year').dirty">Should be a value from 1900 to {{currentYear}}</p>
                 </div>
             </div>
+
+
         </div>
     </div>
 
