--- a/src/app/user-profile-form/user-profile-form.component.html
+++ b/src/app/user-profile-form/user-profile-form.component.html
@@ -1,4 +1,4 @@
-<form class="ui form" novalidate [formGroup]="user">
+<form class="ui form" novalidate [formGroup]="user" (ngSubmit)="submit()">
 
     <h4 class="ui dividing header">User profile:</h4>
 
