--- a/src/app/user-profile-form/user-profile-form.component.html
+++ b/src/app/user-profile-form/user-profile-form.component.html
@@ -95,4 +95,5 @@
     </div>
 
     <button class="ui submit button" type="submit" [disabled]="user.invalid">Submit</button>
+    <button class="ui submit button" (click)="resetForm()">Reset</button>
 </form>
